--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@ button:active { transform:scale(0.94); }
 /* ANIMAÇÕES */
 @keyframes fadeIn { from{opacity:0;} to{opacity:1;} }
 @keyframes pulse { 0%{transform:scale(1);} 50%{transform:scale(1.25);} 100%{transform:scale(1);} }
+
+/* X DE FECHAR A MSG SURPRESA*/
+#closeMsg {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  font-size: 2rem;
+  color: white;
+  cursor: pointer;
+  z-index: 10000;
+}
+
 </style>
 </head>
 <body>
@@ -76,7 +88,7 @@ button:active { transform:scale(0.94); }
     <div class="carousel-item"><img src="assets/julho.jpg" alt="Julho"><div class="caption">26/Julho - Na minha casa<br>Escolhi essa porque amo nossos momentos de bobeira e caretas.</div></div>
     <div class="carousel-item"><img src="assets/agosto.jpg" alt="Agosto"><div class="caption">09/Agosto - Na sua mãe<br>Uma das nossas várias fotos no elevador. Me lembra coisas boas.</div></div>
     <div class="carousel-item"><img src="assets/setembro.jpg" alt="Setembro"><div class="caption">07/Setembro - The Town<br>Muito pouco felizes após o show do Iggy Pop. Que dia.</div></div>
-    <div class="carousel-item"><img src="assets/outubro.jpg" alt="Outubro"><div class="caption">31/10 - Após o show do Michale Graves<br>Amo essa foto. Sua cara de maníaco está A+.</div></div>
+    <div class="carousel-item"><img src="assets/outubro.jpg" alt="Outubro"><div class="caption">31/Outubro - Após o show do Michale Graves<br>Amo essa foto. Sua cara de maníaco está A+.</div></div>
     <div class="carousel-item"><img src="assets/novembro.jpg" alt="Novembro"><div class="caption">15/Novembro - Molchat Doma<br>A gente vira adolescente e faz loucuras. Cada uma vale a pena só por ser contigo.</div></div>
   </div>
 </section>
@@ -98,6 +110,7 @@ button:active { transform:scale(0.94); }
 <!-- Botão surpresa -->
 <section id="surpresa">
   <button id="btnSurpresa">Clique aqui</button>
+  <span id="closeMsg">×</span>
 </section>
 
 <!-- Mensagem surpresa -->
@@ -203,6 +216,15 @@ window.addEventListener('scroll',()=>{
     if(top<window.innerHeight-100)s.classList.add('visible');
   });
 });
+
+  // Fechar a mensagem ao clicar no ×
+const close = document.getElementById('closeMsg');
+close.addEventListener('click', () => {
+  mensagem.style.transition = 'opacity 0.5s';
+  mensagem.style.opacity = 0;
+  setTimeout(() => { mensagem.style.display = 'none'; }, 500);
+});
+
 </script>
 
 </body>
