--- a/index.html
+++ b/index.html
@@ -72,24 +72,26 @@ button:active { transform:scale(0.94); }
 <!-- Nossa História -->
 <section id="historia">
   <h2>Nossa História</h2>
-  <p>Tudo começou quando o destino cruzou nossos caminhos num simples app de relacionamento. Você, buscando apenas alguém para a sua banda, e eu buscando apenas um namorado cabeludo. Quem foi que saiu ganhando, hein?! Hahaha. 
-A gente mal se falava e eu, particularmente, nem dava bola. Estava vivendo a vida, um dia após o outro, sem nenhum interesse na sua pessoa (afinal, você não era o único cabeludo naquele app, não é mesmo?!). 
+  <p> Tudo começou quando o destino cruzou nossos caminhos num simples app de relacionamento. Você, buscando apenas alguém para a sua banda, e eu buscando apenas um namorado cabeludo. Quem foi que saiu ganhando, hein?! Hahaha. </p> 
+ 
+	<p> A gente mal se falava e eu, particularmente, nem dava bola. Estava vivendo a vida, um dia após o outro, sem nenhum interesse na sua pessoa (afinal, você não era o único cabeludo naquele app, não é mesmo?!). </p> 
 
-Quando resolvi compartilhar minha experiência de ir ao show do Ghost contigo, foi naquele exato momento que tudo mudou e eu percebi o quão diferente dos outros cabeludos você era. O interesse em conhecer mais da sua pessoa foi aumentando a cada hora que passava… e foi aí que não desgrudamos mais. 
+<p> Quando resolvi compartilhar minha experiência de ir ao show do Ghost contigo, foi naquele exato momento que tudo mudou e eu percebi o quão diferente dos outros cabeludos você era. O interesse em conhecer mais da sua pessoa foi aumentando a cada hora que passava… e foi aí que não desgrudamos mais. </p> 
 
-No dia 04/10, lancei um papinho de que queria jogar algum game contigo e praticamente te forcei a entrar na call do Discord (você nem sabia o que era, lembra? Kkk). Você não era acostumado a falar por ligação e sempre odiou áudios, mesmo assim se esforçou para falar comigo. E, poxa… a gente nunca nem jogou! Só ficamos lá por 6 horas conversando (fora o WhatsApp, que foi mais ainda), e eu tenho certeza de que nos apaixonamos naquele mesmo dia. 
+<p> No dia 04/10, lancei um papinho de que queria jogar algum game contigo e praticamente te forcei a entrar na call do Discord (você nem sabia o que era, lembra? Kkk). Você não era acostumado a falar por ligação e sempre odiou áudios, mesmo assim se esforçou para falar comigo. E, cara… a gente nunca nem jogou! Só ficamos lá por 6 horas conversando (fora o WhatsApp, que foi mais ainda), e eu tenho certeza de que nos apaixonamos naquele mesmo dia. </p> 
 
-Dois meses se passaram e pareciam dois anos. A gente se dava tão bem, se encaixava tanto um no outro, que mal tivemos tempo de nos conhecer e já sabíamos que iríamos ficar juntos. Você teve uma atitude admirável ao me pedir em namoro naquela que já era a nossa música, em meio ao show da sua banda favorita, no tempo perfeito, e eu juro que nunca senti aquilo antes. Eu sabia que era amor, mas só o tempo poderia confirmar o que eu estava sentindo. 
+<p> Dois meses se passaram e pareciam dois anos. A gente se dava tão bem, se encaixava tanto um no outro, que mal tivemos tempo de nos conhecer e já sabíamos que iríamos ficar juntos. Você teve uma atitude admirável ao me pedir em namoro naquela que já era a nossa música, em meio ao show da sua banda favorita, no tempo perfeito, e eu juro que nunca senti aquilo antes. Eu sabia que era amor, mas só o tempo poderia confirmar o que eu estava sentindo. </p> 
 
-O tempo foi passando, o tempo foi passando, e tudo foi ficando meio escalafobético… HAHAHAHA. 
-Nesses anos, tivemos diversos problemas (assim como qualquer casal tem) e pudemos superar todas as adversidades. Mas, independentemente das conversas e das experiências, nós temos algo a nosso favor que é o mais importante: a vontade de continuar juntos e fazer dar certo. 
+<p> O tempo foi passando, o tempo foi passando, e tudo foi ficando meio escalafobético… HAHAHAHA. </p> 
+ 
+	<p> Nesses anos, tivemos diversos problemas (assim como qualquer casal tem) e pudemos superar todas as adversidades. Mas, independentemente das conversas e das experiências, nós temos algo a nosso favor que é o mais importante: a vontade de continuar juntos e fazer dar certo. </p> 
 
-Bom… foi prometendo que não encheria meu saco que tudo começou, e até hoje (ainda bem) você continua me enchendo, não só o saco, mas também me enchendo de amor, carinho, respeito, amizade, cumplicidade, prazeres, ensinamentos e de chatice… ah, como é mala!!! 
+<p> Bom… foi prometendo que não encheria meu saco que tudo começou, e até hoje (ainda bem) você continua me enchendo, não só o saco, mas também me enchendo de amor, carinho, respeito, amizade, cumplicidade, prazeres, ensinamentos e de chatice… ah, como é mala!!! </p> 
 
-Cada vez nos encantamos mais um pelo outro. Em cada mês que se passou, pudemos aprender um com o outro de forma natural, com muito respeito, que pretendo levar para o resto da vida (18 anos). 
+<p> Cada vez nos encantamos mais um pelo outro. Em cada mês que se passou, pudemos aprender um com o outro de forma natural, com muito respeito, que pretendo levar para o resto da vida (18 anos). </p> 
  
 
-E, se tem algo que esse tempo todo me mostrou, é que mesmo com altos e baixos, conversas intermináveis e nosso jeito esquisito de ser, é ao seu lado que eu quero estar e continuar construindo tudo pra nós. </p>
+<p> E, se tem algo que esse tempo todo me mostrou, é que mesmo com altos e baixos, conversas intermináveis e nosso jeito esquisito de ser, é ao seu lado que eu quero estar e continuar construindo tudo pra nós. </p> 
 </section>
 
 <!-- Carrossel Nossos Momentos -->
