--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@ body { font-family:'Poppins', Arial, sans-serif; background:#0a0a0f; color:white
 section { padding:70px 20px; text-align:center; opacity:0; transform:translateY(30px); transition:0.8s ease; }
 section.visible { opacity:1; transform:translateY(0); }
 
+/* Espaçamento só nos parágrafos da história */
+#historia p {
+  margin-bottom: 20px;
+  line-height: 1.6;
+}
+
 h2 { font-size:2rem; margin-bottom:18px; color:#ff6fa8; text-shadow:0 0 10px rgba(255,120,150,0.4); }
 
 /* CARROSSEL POLAROID */
