--- a/index.html
+++ b/index.html
@@ -121,7 +121,22 @@ button:active { transform:scale(0.94); }
 <!-- Declaração da Mari -->
 <section id="declaracao">
   <h2>Declaração da Mari</h2>
-  <p>Dois anos ao seu lado parecem um sonho que não acaba. Cada dia, cada momento, cada detalhe...</p>
+	
+<p> Bizo, quero que saiba que você me faz muito feliz, do jeitinho que você é.
+	Eu te amo tanto e não consigo mais imaginar a minha vida sem você. 
+	Espero que sejamos cada vez mais felizes e realizados no nosso relacionamento.
+	Sou muito grata por ter a oportunidade de compartilhar a vida com você. 
+</p>
+
+<p>“Amar é um deserto e seus temores 
+	Vida que vai na sela dessas dores 
+	Não sabe voltar, me dá teu calor </p>
+
+<p>Vem me fazer feliz porque eu te amo 
+	Você deságua em mim, e eu, oceano 
+	E esqueço que amar é quase uma dor 
+	Só sei viver se for por você” - Djavan </p>
+	
 </section>
 
 <!-- Tudo que amo em você -->
