--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ button:active { transform:scale(0.94); }
     <div class="carousel-item"><img src="assets/agosto.jpg" alt="Agosto"><div class="caption">09/Agosto - Na sua mãe<br>Uma das nossas várias fotos no elevador. Me lembra coisas boas.</div></div>
     <div class="carousel-item"><img src="assets/setembro.jpg" alt="Setembro"><div class="caption">07/Setembro - The Town<br>Muito pouco felizes após o show do Iggy Pop. Que dia.</div></div>
     <div class="carousel-item"><img src="assets/outubro.jpg" alt="Outubro"><div class="caption">31/Outubro - Após o show do Michale Graves<br>Amo essa foto. Sua cara de maníaco está A+.</div></div>
-    <div class="carousel-item"><img src="assets/novembro.jpg" alt="Novembro"><div class="caption">15/Novembro - Molchat Doma<br>A gente vira adolescente e faz loucuras. Cada uma vale a pena só por ser contigo.</div></div>
+    <div class="carousel-item"><img src="assets/novembro.jpg" alt="Novembro"><div class="caption">15/Novembro - Molchat Doma<br>Às vezes a gente vira adolescente e faz loucuras. Mas cada uma delas vale a pena só por ser contigo.</div></div>
   </div>
 </section>
 
@@ -147,7 +147,7 @@ button:active { transform:scale(0.94); }
 
 <!-- Tudo que amo em você -->
 <section id="amor">
-  <h2>Tudo que eu amo em você</h2>
+  <h2>Versões do Bizo que eu amo <3 </h2>
   <p>Seu sorriso.</p>
   <p>Seu jeito bobo.</p>
   <p>Seu abraço.</p>
