--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ h2 { font-size:2rem; margin-bottom:18px; color:#ff6fa8; text-shadow:0 0 10px rgb
   background: #1b1b22;
   padding-bottom: 20px;
   user-select: none;
+  height: 270px; /* altura das imagens + espaço pra legenda */
 }
 
 /* Criar a “linha” de fotos que desliza */
@@ -62,10 +63,16 @@ h2 { font-size:2rem; margin-bottom:18px; color:#ff6fa8; text-shadow:0 0 10px rgb
   text-align: center;
 }
 
-.carousel-item img {
+.carousel-item img,
+#carouselBizo .carousel-item img {
   width: 100%;
+  height: 250px; /* ou altura que você quiser pro carrossel */
+  object-fit: cover; /* mantém proporção e corta se necessário */
   border-radius: 16px;
+  cursor: pointer;
+  transition: transform 0.2s;
 }
+
 
 .caption {
   margin-top: 10px;
@@ -115,6 +122,7 @@ button:active { transform:scale(0.94); }
   background: #1b1b22;
   padding-bottom: 20px;
   user-select: none;
+	height: 270px; /* altura das imagens + espaço pra legenda */
 }
 
 #carouselBizo .carousel-item {
