--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@ button:active { transform:scale(0.94); }
 <section id="declaracao">
   <h2>Declaração da Mari</h2>
 	
-<p> Bizo, quero que saiba que você me faz muito feliz, do jeitinho que você é.
-	Eu te amo tanto e não consigo mais imaginar a minha vida sem você. 
-	Espero que sejamos cada vez mais felizes e realizados no nosso relacionamento.
-	Sou muito grata por ter a oportunidade de compartilhar a vida com você. 
-</p>
+<p> Bizo, quero que saiba que você me faz muito feliz, do jeitinho que você é.</p>
+	<p>Eu te amo tanto e não consigo mais imaginar a minha vida sem você.</p>
+	<p>Espero que sejamos cada vez mais felizes e realizados no nosso relacionamento.</p>
+	<p>Sou muito grata por ter a oportunidade de compartilhar a vida com você. </p>
+
 
 <p>“Amar é um deserto e seus temores 
 	Vida que vai na sela dessas dores 
